--- a/public/task1.html
+++ b/public/task1.html
@@ -18,6 +18,6 @@
         <button id="specialEffectBtn">Special Effect</button>
       </div>
     </div>
-    <script type="module" src="/task1.js"></script>
+    <script type="module" src="public/task1.js"></script>
   </body>
 </html>
