--- a/task1.html
+++ b/task1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AR Lab 5(1) - Interactive 3D Objects</title>
+    <title>AR Lab 5 - Interactive 3D Objects</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
