--- a/task3.html
+++ b/task3.html
@@ -3,12 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AR Lab 5 - Interactive 3D Objects</title>
+    <title>AR Lab 5</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div id="controls">
+      <div class="button-group">
+        <button id="changeColorBtn">Change Cone Color</button>
+        <div id="colorIndicator"></div>
+      </div>
+      <button id="toggleRotationBtn">Toggle Rotation</button>
+      <div class="button-group">
+        <button id="changeSizeBtn">Change Cone Size</button>
+        <span id="scaleIndicator">Current Scale: 1.0</span>
+      </div>
+      <button id="toggleScaleAnimationBtn">Toggle Scale Animation</button>
+      <button id="changeMaterialBtn">Change Material</button>
     </div>
+    <audio id="placeSound" src="../glass-bottle-smash-229205.mp3"></audio> <!-- Використання звуку імпортованого у проєкт -->
     <script type="module" src="/src/task3.js"></script>
   </body>
 </html>
