--- a/task3.html
+++ b/task3.html
@@ -20,7 +20,7 @@
       <button id="toggleScaleAnimationBtn">Toggle Scale Animation</button>
       <button id="changeMaterialBtn">Change Material</button>
     </div>
-    <audio id="placeSound" src="../glass-bottle-smash-229205.mp3"></audio> <!-- Використання звуку імпортованого у проєкт -->
+    <audio id="placeSound" src="generic-metallic-sound-1-94328.mp3"></audio> <!-- Використання звуку імпортованого у проєкт -->
     <script type="module" src="/src/task3.js"></script>
   </body>
 </html>
