--- a/task3.html
+++ b/task3.html
@@ -9,15 +9,15 @@
   <body>
     <div id="controls">
       <div class="button-group">
-        <button id="changeColorBtn">Change Cone Color</button>
+        <button id="changeColorBtn">Change Color</button>
         <div id="colorIndicator"></div>
       </div>
-      <button id="toggleRotationBtn">Toggle Rotation</button>
+      <button id="toggleRotationBtn">Disable Rotation</button>
       <div class="button-group">
-        <button id="changeSizeBtn">Change Cone Size</button>
+        <button id="changeSizeBtn">Change Size</button>
         <span id="scaleIndicator">Current Scale: 1.0</span>
       </div>
-      <button id="toggleScaleAnimationBtn">Toggle Scale Animation</button>
+      <button id="toggleScaleAnimationBtn">Disable Scale Animation</button>
       <button id="changeMaterialBtn">Change Material</button>
     </div>
     <audio id="placeSound" src="generic-metallic-sound-1-94328.mp3"></audio> <!-- Використання звуку імпортованого у проєкт -->
