--- a/task4.html
+++ b/task4.html
@@ -8,7 +8,21 @@
   </head>
   <body>
     <div id="controls">
+      <div class="button-group-t1">
+        <button id="materialRealisticBtn">Material: Realistic</button>
+        <button id="materialGoldBtn">Material: Gold</button>
+        <button id="materialGlowBtn">Material: Glow</button>
+        <button id="materialGlassBtn">Material: Glass</button>
+        <button id="materialChromeBtn">Material: Chrome</button>
+      </div>
+      <button id="toggleDirectionalLightBtn">Directional Light: On</button>
+      <button id="increaseLightIntensityBtn">Increase Light Intensity</button>
+      <button id="decreaseLightIntensityBtn">Decrease Light Intensity</button>
+      <button id="changeLightColorBtn">Change Light Color</button>
+      <button id="toggleJumpBtn">Jump: On</button>
+      <button id="toggleRotationBtn">Rotation: On</button>
     </div>
+    <audio id="placeSound" src="generic-metallic-sound-1-94328.mp3"></audio> <!-- Використання звуку імпортованого у проєкт -->
     <script type="module" src="/src/task4.js"></script>
   </body>
 </html>
